--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "postinstall": "npx puppeteer@latest install",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
